Adjust spacing and img size

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           background-color: black !important;
           color: white !important;
         }
+        .table-dark {
+          background-color: #26384d !important;
+        }
       }
       body {
         margin: 0;
@@ -174,7 +177,7 @@
 
         <tr>
           <td style="padding: 20px 32px">
-            <table style="width: 100%" class="table">
+            <table style="width: 100%" class="table table-dark">
               <tr>
                 <td class="two-columns" style="display: flex">
                   <table class="column">
@@ -222,12 +225,10 @@
                           margin-left: 34px;
                         ">
                         <a
-                          href="https://www.instagram.com/usetamaraen/"
+                          href="https://www.tiktok.com/@usetamaraen"
                           target="_blank">
                           <img
-                            height="24px"
-                            width="24px"
-                            src="./img/Frame.svg"
+                            src="./img/tiktok_ar_final.svg"
                             alt=""
                             style="margin-right: 27.78px" />
                         </a>
@@ -235,20 +236,14 @@
                           href="https://twitter.com/usetamaraen?s=20&t=H3YgRG-3-1A3CuCG4QZCeA"
                           target="_blank">
                           <img
-                            width="24px"
-                            height="24px"
                             src="./img/twitter.svg"
                             alt=""
                             style="margin-right: 27.78px" />
                         </a>
                         <a
-                          href="https://www.tiktok.com/@usetamaraen"
+                          href="https://www.instagram.com/usetamaraen/"
                           target="_blank">
-                          <img
-                            width="24px"
-                            height="24px"
-                            src="./img/tiktok.svg"
-                            alt="" />
+                          <img src="./img/Frame.svg" alt="" />
                         </a>
                       </td>
                     </tr>
@@ -273,19 +268,22 @@
                           ">
                           <a
                             href="https://tamara.co/en/terms-and-conditions.html"
-                            target="_blank">
+                            target="_blank"
+                            style="text-decoration: none">
                             <p class="address">مركز المساعدة</p>
                           </a>
                           <a
                             href="https://cdn.tamara.co/static/faq-en.html"
-                            target="_blank">
+                            target="_blank"
+                            style="text-decoration: none">
                             <p class="address" style="margin-left: 26px">
                               أسئلة وأجوبة
                             </p>
                           </a>
                           <a
                             href="https://support.tamara.co/hc/en-us"
-                            target="_blank">
+                            target="_blank"
+                            style="text-decoration: none">
                             <p class="address" style="margin-left: 26px">
                               الشروط والأحكام
                             </p>
