--- a/index.html
+++ b/index.html
@@ -4,29 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="light dark" />
-    <meta name="supported-color-schemes" content="light dark" />
+
     <title>Arabic Email Template</title>
     <style type="text/css">
-      :root {
-        color-scheme: light dark;
-        supported-color-schemes: light dark;
-      }
-      @media (prefers-color-scheme: dark) {
-        .dark-btn {
-          background: #fff !important;
-        }
-        .pay-text-dark {
-          color: #000000 !important;
-        }
-        .main-dark {
-          background-color: black !important;
-          color: white !important;
-        }
-        .table-dark {
-          background-color: #1c2a3a !important;
-        }
-      }
       body {
         margin: 0;
         background-color: #cccccc;
@@ -48,20 +28,11 @@
         padding: 0;
         margin: 0;
       }
-
       .two-columns .column {
         width: 100%;
         max-width: 300px;
         display: inline-block;
         vertical-align: top;
-      }
-
-      .address {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 22px;
-        color: #ffffff;
-        text-align: right;
       }
     </style>
   </head>
@@ -96,7 +67,8 @@
         <tr>
           <td style="padding: 40px 32px 20px">
             <h2 style="font-size: 24; font-weight: 700; text-align: right">
-              ! |*customerName*| يا هلا
+              *|IF:customerName=noName|* ! يا هلا *|ELSE:|* ! *|customerName|*
+              يا هلا *|END:IF|*
             </h2>
             <p
               style="
@@ -107,15 +79,18 @@
                 text-align: right;
               "
               dir="rtl">
-              تم إنشاء طلبك من *|merchantName|* بقيمة *|total|* ريال وهو حاليا
-              قيد الانتظار حتى تتم عملية الدفع
+              تم إنشاء طلبك من *|merchantName|* بقيمة *|total|* *|currency|*
+              ريال وهو حاليا قيد الانتظار حتى تتم عملية الدفع
             </p>
           </td>
         </tr>
 
         <tr>
           <td style="padding: 60px">
-            <a href="paymentLink" target="_blank" style="text-decoration: none">
+            <a
+              href="*|paymentLink|*"
+              target="_blank"
+              style="text-decoration: none">
               <div
                 class="dark-btn"
                 style="
@@ -297,7 +272,6 @@
                             target="_blank"
                             style="text-decoration: none">
                             <p
-                              class="address"
                               style="
                                 font-weight: 400;
                                 font-size: 14px;
@@ -313,7 +287,6 @@
                             target="_blank"
                             style="text-decoration: none">
                             <p
-                              class="address"
                               style="
                                 margin-left: 26px;
                                 font-weight: 400;
@@ -330,7 +303,6 @@
                             target="_blank"
                             style="text-decoration: none">
                             <p
-                              class="address"
                               style="
                                 margin-left: 26px;
                                 font-weight: 400;
