--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <tr>
           <td>
-            <table style="width: 100%; background: #000000">
+            <table style="width: 100%">
               <tr>
                 <td class="two-columns" style="display: flex">
                   <table
@@ -211,14 +211,14 @@
                       <td
                         style="
                           display: flex;
-                          margin-top: 148px;
+                          margin-top: 144px;
                           margin-left: 34px;
                         ">
                         <a
                           href="https://www.tiktok.com/@usetamaraen"
                           target="_blank">
                           <img
-                            src="https://mcusercontent.com/7aa8041a84f5e43a8572cffaf/images/326253a9-1820-de48-4b43-673837e220ad.png"
+                            src="https://mcusercontent.com/7aa8041a84f5e43a8572cffaf/images/e3b83d01-e06e-19c5-9efa-be22dbd32f51.png"
                             alt=""
                             style="margin-right: 27.78px" />
                         </a>
@@ -226,7 +226,7 @@
                           href="https://twitter.com/usetamaraen?s=20&t=H3YgRG-3-1A3CuCG4QZCeA"
                           target="_blank">
                           <img
-                            src="https://mcusercontent.com/7aa8041a84f5e43a8572cffaf/images/9ef4bf3c-ebb6-8424-f827-6eb4377c3fba.png"
+                            src="https://mcusercontent.com/7aa8041a84f5e43a8572cffaf/images/92b8fb27-5e26-b566-b1bb-1e12edb3b99d.png"
                             alt=""
                             style="margin-right: 27.78px" />
                         </a>
@@ -234,7 +234,7 @@
                           href="https://www.instagram.com/usetamaraen/"
                           target="_blank">
                           <img
-                            src="https://mcusercontent.com/7aa8041a84f5e43a8572cffaf/images/9222e952-9e0a-261f-584d-b4372b1d2212.png"
+                            src="https://mcusercontent.com/7aa8041a84f5e43a8572cffaf/images/b35b6d09-ec6d-e538-f011-ce80d1bbc1f5.png"
                             alt="" />
                         </a>
                       </td>
@@ -244,7 +244,7 @@
                     <tr>
                       <td style="padding: 40px 32px">
                         <img
-                          src="https://mcusercontent.com/7aa8041a84f5e43a8572cffaf/images/02eb0428-08f7-8231-cf1a-85a273a4abdb.png"
+                          src="https://mcusercontent.com/7aa8041a84f5e43a8572cffaf/images/f7d6f1a8-a045-963e-0d1e-c15de6e45d1a.png"
                           alt=""
                           style="margin-bottom: 24px; margin-left: 288px" />
                         <p
@@ -253,7 +253,7 @@
                             font-weight: 400;
                             font-size: 14px;
                             line-height: 22px;
-                            color: #ffffff;
+
                             text-align: right;
                           "
                           dir="rtl">
@@ -276,7 +276,8 @@
                                 font-weight: 400;
                                 font-size: 14px;
                                 line-height: 22px;
-                                color: #ffffff;
+                                text-decoration: underline;
+                                color: #000000;
                                 text-align: right;
                               ">
                               مركز المساعدة
@@ -292,8 +293,9 @@
                                 font-weight: 400;
                                 font-size: 14px;
                                 line-height: 22px;
-                                color: #ffffff;
+                                text-decoration: underline;
                                 text-align: right;
+                                color: #000000;
                               ">
                               أسئلة وأجوبة
                             </p>
@@ -308,8 +310,9 @@
                                 font-weight: 400;
                                 font-size: 14px;
                                 line-height: 22px;
-                                color: #ffffff;
+                                text-decoration: underline;
                                 text-align: right;
+                                color: #000000;
                               ">
                               الشروط والأحكام
                             </p>
